@@ -140,6 +140,8 @@ BUG FIXES
     o	setClass("C", contains="list"); new("C", 1:3)[2:3] now remains
 	of class "C".
 
+    o	deparse(control="S_compatible") now never uses backticks.
+
 
 
 
